--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "voteapp-client",
-	"version": "0.1.0",
+	"version": "1.0.0",
+	"engines": {
+		"node": "12.x"
+	},
 	"private": true,
 	"dependencies": {
 		"@ant-design/icons": "^4.2.2",
