--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 REACT_APP_KEY=AIzaSyBz6nwfaz00TcGhrBTs69sZdNgd0JPVP3g
 REACT_APP_API_BASE_URL=http://localhost:8080;
 REACT_APP_CLIENT_ID=ARXVgrBFuxV3XDZBCkwgNLTGJfFbxZfP_h_aDTi3TFcCFSi6HpcxgVlDb_nNsOYe_bBSHWjfKs0vE8Os
+SKIP_PREFLIGHT_CHECK=true
 
 
 	# const [lat, setLat] = useState("");
